force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__GeolocationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeolocationText__c</fullName>
    <label>Geolocation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeolocationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>