force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__InTerritoryTravelTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__InTerritoryTravelTimeMinutes__c</fullName>
    <label>In Territory Travel Time Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InTerritoryTravelTimeMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>