force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__IsUsingOptimizationEngine__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUsingOptimizationEngine__c</fullName>
    <label>Is Using Optimization Engine</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUsingOptimizationEngine</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>