force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OwnerId__c</fullName>
    <label>Owner</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OwnerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>