force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__rel_1705061032574_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061032574_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceTerritory_LastModifiedById_ma_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ServiceTerritory_LastModifiedById_ma_rel</relationshipLabel>
    <relationshipName>rel_1705061032574_end</relationshipName>
    <type>Lookup</type>
</CustomField>