force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__rel_1705061033072_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061033072_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceTerritory_Address_map_Address_rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>ServiceTerritory_Address_map_Address_rel</relationshipLabel>
    <relationshipName>rel_1705061033072_end</relationshipName>
    <type>Lookup</type>
</CustomField>