force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__rel_1705061035085_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061035085_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceTerritory_ParentTerritoryId_m_rel</label>
    <referenceTo>ssot__ServiceTerritory__dlm</referenceTo>
    <relationshipLabel>ServiceTerritory_ParentTerritoryId_m_rel</relationshipLabel>
    <relationshipName>rel_1705061035085_end</relationshipName>
    <type>Lookup</type>
</CustomField>