force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__ServiceClusterProximity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceClusterProximity__c</fullName>
    <label>Service Cluster Proximity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceClusterProximity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>