force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__ShouldHideEmergencyMap__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldHideEmergencyMap__c</fullName>
    <label>Should Hide Emergency Map</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldHideEmergencyMap</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>