force-app/main/default/objects/ssot__ServiceTerritory__dlm/fields/ssot__TerritoryLevelNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TerritoryLevelNumber__c</fullName>
    <label>Territory Level</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TerritoryLevelNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>